[package]
name = "safe-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4.3.1"
serde= { version = "1.0.179", features = ["derive"] }
reqwest = {version = "0.11.18",default-features = false, features = ["json", "rustls-tls-native-roots"] }
anyhow = "1.0.72"
tokio = { version ="1.29.1", features = ["macros", "rt-multi-thread", "fs"] }
base64 = "0.21.2"
sha3 = "0.10.8"
hex = "0.4.3"
clap = { version = "4.3.19", features = ["derive"] }
serde_json = "1.0.104"